fix: correct social media icon overlap on xl screens

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -25,6 +25,8 @@
 
 .header .social {
   bottom: 50px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .about-img {
